Fixes - (minor fix) colors for the stacked chart according to the theme. Pending - Dark mode for pages ( need to work on themestudio generated css )

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,14 @@ body {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* .e-row, .e-headercell {
+    background-color: rgb(30, 30, 208) !important;
+} 
+*/
+
+/* .secondary-dark-color{
+    background-color: #33373E;
+    color:white;
+} */
+
